--- a/src/Pages/PortalClosed/PortalClosed.scss
+++ b/src/Pages/PortalClosed/PortalClosed.scss
@@ -1,9 +1,9 @@
 #PortalClosed {
-    .col_size_wrapper{
-        @media (max-width: 767px){
-            width: 100%!important;
-        }
+  .col_size_wrapper {
+    @media (max-width: 767px) {
+      width: 100% !important;
     }
+  }
   aside {
     background: #000;
     .box_title {
@@ -38,7 +38,93 @@
     }
   }
   .content_right_side {
-    grid-gap: 1.5rem !important;
-    gap: 1.5rem !important;
+    padding-left: 1.5rem;
+  }
+  #portalClosedContent {
+    .tabItemWrapper {
+      background: white;
+      border: 5px solid black;
+      li {
+        font-size: 2.4rem;
+        // padding: 0.4rem;
+        color: var(--col-text);
+        text-transform: uppercase;
+        flex-grow: 1;
+        text-align: center;
+        border-right: 5px solid black;
+
+        &:last-child {
+          border-right: none;
+        }
+      }
+      .list_dropdown {
+        font-size: 24px;
+        button {
+          background: transparent;
+          width: 100%;
+          height: 100%;
+          border: none;
+          text-transform: uppercase;
+        }
+        .dropdown-toggle:after {
+          display: none;
+        }
+        .dropdown-menu {
+          transform: translate(0, 0) !important;
+          top: 5.2rem !important;
+          width: 100%;
+          border-radius: 0px;
+          border: 5px solid black;
+          li {
+            padding: 0px;
+            border-radius: 0px !important;
+            border: none;
+          }
+          .dropdown-item {
+            border-bottom: 5px solid black;
+            border-radius: 0px !important;
+            padding: 5px 7px !important;
+            font-size: 20px;
+            &:hover {
+              background: transparent;
+            }
+          }
+        }
+      }
+    }
+    .tabItemContent {
+      background: white;
+      .tabItemList {
+        border-left: 7px solid black;
+        border-right: 7px solid black;
+        & > li {
+          border-bottom: solid 7px black;
+        padding: 1rem 3rem!important;
+
+        }
+      }
+      .col_header {
+        font-size: 3.6rem;
+        border-bottom: solid 2px var(--col-text);
+        h3 {
+          font-weight: bold;
+          font-size: 3.6rem;
+        }
+      }
+      .tabContentLink {
+        color: black;
+        &:hover {
+          .col_header h3 {
+            color: var(--col-text-purple);
+          }
+        }
+      }
+      .col_body {
+        font-size: 2.4rem;
+        a {
+          color: var(--col-text-purple);
+        }
+      }
+    }
   }
 }
