--- a/src/Pages/PortalItems/PortalItems.css
+++ b/src/Pages/PortalItems/PortalItems.css
@@ -8,9 +8,21 @@
   border-bottom: solid 2px var(--col-text);
 }
 
+@media (max-width: 767px) {
+  #PortalItems .col_header {
+    font-size: 20px;
+  }
+}
+
 #PortalItems .col_header h3 {
   font-weight: bold;
   font-size: 3.6rem;
+}
+
+@media (max-width: 767px) {
+  #PortalItems .col_header h3 {
+    font-size: 20px;
+  }
 }
 
 #PortalItems .col_header .back_btn {
@@ -47,7 +59,7 @@
 
 #PortalItems .col_body .nes-btn {
   width: 100%;
-  height: 50px;
+  max-height: 50px;
   font-size: 24px;
   background: rgba(0, 0, 0, 0.3) !important;
   color: #fff;
@@ -58,9 +70,16 @@
 
 #PortalItems .col_body .user_details_col {
   font-size: 3.2rem;
+  line-height: 40px;
 }
 
 #PortalItems .col_body .user_details_col h2 {
   font-size: 4.8rem;
+}
+
+@media (max-width: 768px) {
+  #PortalItems .col_body .user_details_col h2 {
+    font-size: 32px;
+  }
 }
 /*# sourceMappingURL=PortalItems.css.map */
