--- a/src/Pages/PortalItems/PortalItems.scss
+++ b/src/Pages/PortalItems/PortalItems.scss
@@ -6,9 +6,15 @@
   .col_header {
     font-size: 3.6rem;
     border-bottom: solid 2px var(--col-text);
+    @media (max-width: 767px) {
+      font-size: 20px;
+    }
     h3 {
       font-weight: bold;
       font-size: 3.6rem;
+      @media (max-width: 767px) {
+        font-size: 20px;
+      }
     }
     .back_btn {
       background: transparent;
@@ -33,17 +39,21 @@
     }
     .nes-btn {
       width: 100%;
-      height: 50px;
+      max-height: 50px;
       font-size: 24px;
-      background: rgba(0, 0, 0, 0.3)!important;
+      background: rgba(0, 0, 0, 0.3) !important;
       color: #fff;
       margin-top: 2rem;
-      box-shadow: inset -4px -4px rgba(0, 0, 0, 0.2)!important;
+      box-shadow: inset -4px -4px rgba(0, 0, 0, 0.2) !important;
     }
     .user_details_col {
       font-size: 3.2rem;
+      line-height: 40px;
       h2 {
         font-size: 4.8rem;
+        @media (max-width: 768px) {
+          font-size: 32px;
+        }
       }
     }
   }
