fixing minor issue

--- a/src/Pages/PortalItems/PortalItems.css
+++ b/src/Pages/PortalItems/PortalItems.css
@@ -3,12 +3,18 @@
   padding: 1rem 3rem !important;
 }
 
+@media (max-width: 768px) {
+  #PortalItems .content_wrapper {
+    padding: 1rem 1.8rem !important;
+  }
+}
+
 #PortalItems .col_header {
   font-size: 3.6rem;
   border-bottom: solid 2px var(--col-text);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #PortalItems .col_header {
     font-size: 20px;
   }
@@ -19,7 +25,7 @@
   font-size: 3.6rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #PortalItems .col_header h3 {
     font-size: 20px;
   }
