--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ html {
 body {
   color: #000;
   background: var(--theme-body-bg) !important;
-  background-attachment: fixed;
+  background-attachment: fixed !important;
   background-image: url("./Static/img/ghostbg.svg"), none !important;
   background-position: 0 0;
   background-repeat: repeat;
@@ -186,7 +186,36 @@ h3 {
   font-size: 3rem;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--col-text) !important;
+}
+
 .text_purple {
   color: var(--col-text-purple);
+}
+
+.btn_purple_with_border {
+  background-color: var(--theme-button-purple);
+  color: white;
+  border: 3px solid #000;
+  font-size: 16px;
+}
+
+[data-theme="dark-theme"] body {
+  background-blend-mode: overlay;
+  background: #080315 !important;
+}
+
+[data-theme="dark-theme"] * {
+  --theme-side-menu: #12032e;
+  --theme-side-menu-button: #200449;
+  --col-pink-300: #7217f4 !important;
+  --baazaar-item-bg: #12032e !important;
+  --col-text: #fff!important;
 }
 /*# sourceMappingURL=App.css.map */
