--- a/src/App.scss
+++ b/src/App.scss
@@ -125,9 +125,9 @@ html {
 body {
   color: #000;
 
-  background: var(--theme-body-bg)!important;
-  background-attachment: fixed;
-  background-image: url("./Static/img/ghostbg.svg"), none!important;
+  background: var(--theme-body-bg) !important;
+  background-attachment: fixed !important;
+  background-image: url("./Static/img/ghostbg.svg"), none !important;
   background-position: 0 0;
   background-repeat: repeat;
   background-size: 300px;
@@ -158,7 +158,6 @@ body {
   }
 }
 
-
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
@@ -177,8 +176,8 @@ button,
 .active_cursor {
   cursor: url("./Static/img/link_cursor.png") 14 0, pointer !important;
 }
-a{
-  text-decoration: none!important;
+a {
+  text-decoration: none !important;
 }
 // ....................Link, button styles..................End
 
@@ -186,7 +185,40 @@ a{
 h3 {
   font-size: 3rem;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--col-text) !important;
+}
 // .................Heading...............End
 .text_purple {
   color: var(--col-text-purple);
 }
+
+// ............btn
+
+.btn_purple_with_border {
+  background-color: var(--theme-button-purple);
+  color: white;
+  border: 3px solid #000;
+  font-size: 16px;
+}
+
+////////////////..................................black theme...............
+[data-theme="dark-theme"] {
+  body {
+    background-blend-mode: overlay;
+    background: #080315 !important;
+  }
+  * {
+    --theme-side-menu: #12032e;
+    --theme-side-menu-button: #200449;
+    --col-pink-300: #7217f4 !important;
+    --baazaar-item-bg: #12032e !important;
+    --col-text: #fff!important;
+  }
+}
+////////////////..................................black theme...............End
