--- a/src/Components/Navigation/Navigation.scss
+++ b/src/Components/Navigation/Navigation.scss
@@ -5,6 +5,9 @@
     border-left: solid 3px var(--dull-border);
   }
 }
+.btn_toggle{
+  background: var(--theme-button-purple);
+}
 .bg_toggle_btn_wrapper {
   width: 50px;
   height: 24px;
