--- a/src/Pages/PortalClosed/PortalClosed.css
+++ b/src/Pages/PortalClosed/PortalClosed.css
@@ -18,8 +18,8 @@
   border: 5px solid black;
   font-size: 20px;
   padding: 0.75rem 0 0.75rem 0;
-  background: white;
-  color: black;
+  background: var(--baazaar-item-bg);
+  color: var(--col-text) !important;
 }
 
 #PortalClosed aside.mobile_aside .aside_title.active_title {
@@ -44,7 +44,8 @@
 }
 
 #PortalClosed aside .box_title {
-  color: #fff;
+  color: var(--col-white) !important;
+  font-weight: 400 !important;
 }
 
 #PortalClosed aside img {
@@ -57,8 +58,8 @@
 }
 
 #PortalClosed aside .aside_link_list li a {
-  background: #fff;
-  color: black;
+  background: var(--baazaar-item-bg);
+  color: var(--col-text) !important;
   font-size: 2rem;
   line-height: 1.6rem;
 }
@@ -68,16 +69,16 @@
 }
 
 #PortalClosed aside .aside_link_list li a:hover {
-  color: var(--col-text-purple);
+  color: var(--col-text-purple) !important;
 }
 
 #PortalClosed aside .aside_link_list li a.active_link {
   background: #7217f4 !important;
-  color: #edd3fd;
+  color: #edd3fd !important;
 }
 
 #PortalClosed aside .aside_link_list li a.active_link:hover {
-  color: #edd3fd;
+  color: #edd3fd !important;
 }
 
 #PortalClosed .content_right_side {
@@ -91,15 +92,15 @@
 }
 
 #PortalClosed .content_right_side .content_wrapper {
-  background: white;
+  background: var(--baazaar-item-bg);
 }
 
 #PortalClosed #portalClosedContent {
-  background: white;
+  background: var(--baazaar-item-bg);
 }
 
 #PortalClosed #portalClosedContent .tabItemWrapper {
-  background: white;
+  background: var(--baazaar-item-bg);
   border: 5px solid black;
 }
 
@@ -170,7 +171,7 @@
 }
 
 #PortalClosed #portalClosedContent .tabItemContent {
-  background: white;
+  background: var(--baazaar-item-bg);
 }
 
 #PortalClosed #portalClosedContent .tabItemContent .tabItemList {
@@ -212,11 +213,11 @@
 }
 
 #PortalClosed #portalClosedContent .tabItemContent .tabContentLink {
-  color: black;
+  color: var(--col-text) !important;
 }
 
 #PortalClosed #portalClosedContent .tabItemContent .tabContentLink:hover .col_header h3 {
-  color: var(--col-text-purple);
+  color: var(--col-text-purple) !important;
 }
 
 #PortalClosed #portalClosedContent .tabItemContent .col_body {
