--- a/src/Pages/PortalClosed/PortalClosed.scss
+++ b/src/Pages/PortalClosed/PortalClosed.scss
@@ -14,8 +14,8 @@
         border: 5px solid black;
         font-size: 20px;
         padding: 0.75rem 0 0.75rem 0;
-        background: white;
-        color: black;
+        background: var(--baazaar-item-bg);
+        color: var(--col-text) !important;
         &.active_title {
           background: #7217f4;
           color: white;
@@ -35,7 +35,8 @@
       }
     }
     .box_title {
-      color: #fff;
+      color: var(--col-white)!important;
+      font-weight: 400!important;
     }
     img {
       object-fit: contain;
@@ -44,21 +45,21 @@
       li {
         margin-bottom: 0.25rem;
         a {
-          background: #fff;
-          color: black;
+          background: var(--baazaar-item-bg);
+          color: var(--col-text) !important;
           font-size: 2rem;
           line-height: 1.6rem;
           img {
             margin-right: 1.6rem;
           }
           &:hover {
-            color: var(--col-text-purple);
+            color: var(--col-text-purple)!important;
           }
           &.active_link {
             background: #7217f4 !important;
-            color: #edd3fd;
+            color: #edd3fd !important;
             &:hover {
-              color: #edd3fd;
+              color: #edd3fd !important;
             }
           }
         }
@@ -71,13 +72,13 @@
       padding-left: 0px;
     }
     .content_wrapper {
-      background: white;
+      background: var(--baazaar-item-bg);
     }
   }
   #portalClosedContent {
-    background: white;
+    background: var(--baazaar-item-bg);
     .tabItemWrapper {
-      background: white;
+      background: var(--baazaar-item-bg);
       border: 5px solid black;
       .result_list {
         @media (max-width: 767px) {
@@ -136,7 +137,7 @@
       }
     }
     .tabItemContent {
-      background: white;
+      background: var(--baazaar-item-bg);
       .tabItemList {
         border-left: 7px solid black;
         border-right: 7px solid black;
@@ -163,10 +164,10 @@
         }
       }
       .tabContentLink {
-        color: black;
+        color: var(--col-text) !important;
         &:hover {
           .col_header h3 {
-            color: var(--col-text-purple);
+            color: var(--col-text-purple)!important;
           }
         }
       }
