--- a/src/App.scss
+++ b/src/App.scss
@@ -190,7 +190,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,p {
   color: var(--col-text) !important;
 }
 // .................Heading...............End
@@ -218,7 +218,10 @@ h6 {
     --theme-side-menu-button: #200449;
     --col-pink-300: #7217f4 !important;
     --baazaar-item-bg: #12032e !important;
-    --col-text: #fff!important;
+    --col-text: #fff !important;
+    --theme-game-border: #47238d !important;
+    --theme-yellow: #47238d;
+    --theme-game-bg: #12032e!important;
   }
 }
 ////////////////..................................black theme...............End
