--- a/src/Pages/MyGotChis/MyGotChis.scss
+++ b/src/Pages/MyGotChis/MyGotChis.scss
@@ -1,9 +1,9 @@
 #MyGotChis {
-  border: solid 15px var(--theme-game-border) !important;
-  background: var(--theme-game-border) ;
+  border: solid 15px var(--theme-yellow) !important;
+  background: var(--theme-yellow) ;
   margin-bottom: 5rem;
   .content_header {
-    background: #04b7bc;
+    background: var(--theme-game-bg);
     padding: 3px 10px;
     .balance {
       font-size: 24px;
@@ -33,7 +33,7 @@
   }
   .content_body{
       min-height: 82vh;
-      background: #04b7bc;
+      background: var(--theme-game-bg);
       text-align: center;
       font-size: 16px;
       color: #000;
